classDiagram
    CLMediaBase <|-- CLMedia
    CLMediaBase <|-- CLMediaFile
    class CLMediaBase{
        + String name
        + CLMediaType type
        + String fExt
        + String? ref
        + DateTime? originalDate
        + String? md5String
        + bool? isDeleted
        + bool? isHidden
        + String? pin
        + int? collectionId
        + bool isAux
    }
    class CLMediaFile {
        + deleteFile()
    }
    class CLMedia{
        + int? id
        + bool isPreviewCached
        + bool isMediaCached
        + String? previewLog
        + String? mediaLog
        + bool isMediaOriginal
        + int? serverUID
        + bool isEdited
        + bool haveItOffline
        + bool mustDownloadOriginal
        + DateTime createdDate
        + DateTime updatedDate

        + isContentSame()
        + toUploadMap()

        + isMediaWaitingForDownload()
        + isMediaDownloadFailed()
        + isMediaLocallyAvailable()
        + isPreviewWaitingForDownload()
        + isPreviewDownloadFailed()
        + isPreviewLocallyAvailable()

        
        

        + mediaFromServerMap()

        + previewFileName()
        + mediaFileName()
        + mediaEndPoint()
        + mediaStreamEndPoint()
        + previewEndPoint()
        + mediaPostEndPoint()
    }
   
    class Collection {
        +String label
        +String? description
        +DateTime? createdDate
        +DateTime? updatedDate
        +int? id
        +CollectionStoragePreference collectionStoragePreference
        +int? serverUID
    }